apps/kestra/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kestra
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: kestra
          image: kestra/kestra
          args: ["server", "standalone"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kestra-data
              mountPath: /app/storage
      volumes:
        - name: kestra-data
          persistentVolumeClaim:
            claimName: kestra-pvc
