apps/kestra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kestra
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
